--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".WorkoutStatistics"></activity>
+        <activity android:name=".WorkoutStatistics" />
+        <activity android:name=".EditWorkoutInfo"></activity>
     </application>
 
 </manifest>
