--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".WorkoutStatistics" />
+        <activity android:name=".WorkoutHistory" />
         <activity android:name=".EditWorkoutInfo" />
         <activity
-            android:name=".WorkoutDatabaseGraphs"
+            android:name=".WorkoutStatistics"
             android:label="@string/title_activity_workout_database_graphs"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
