WorkoutDetailsActivity now shows calculated details also.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.finn.laakso.hangboardapp">
+<!--
+
+    <uses-permission android:name="android.permission.INTERNET" />
+-->
 
     <application
         android:allowBackup="true"
@@ -11,6 +15,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" /> <!-- to remove google indexable error -->
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
