--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".WorkoutActivity" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".TimeControlsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".WorkoutHistoryActivity" />
